<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detected</name>
  <version>0.0.1</version>
  <description>ROS2包用于相机驱动和目标检测</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <!-- 主要依赖 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>autoaim_msgs</depend>
  <depend>utils</depend>
  
  <!-- 指定OpenCV组件 -->
  <depend>libopencv-dev</depend>
  
  <!-- 使用yaml-cpp -->
  <depend>yaml-cpp</depend>
  
  <!-- 用于ROS2 Humble/Rolling -->
  <depend>vision_opencv</depend>
  
  <!-- 添加OpenVINO依赖 -->
  <depend>openvino</depend>
  <depend>armor_pointer</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <build_type_condition>AMENT_CMAKE</build_type_condition>
  </export>
</package>