<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 包的基本信息 -->
  <name>serial_sender</name>
  <version>0.1.0</version>
  <description>
    将 PnP 解算后的角度增量通过串口发送给下位机的 ROS2 节点。
    该节点订阅 /serial_cmd 话题，将 delta_yaw 和 delta_pitch 打包成自定义协议帧，
    通过串口发送给电机控制器。
  </description>

  <!-- 维护者信息 - 请替换为您的信息 -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- 许可证信息 -->
  <!-- 常见选项：Apache-2.0, BSD-3-Clause, MIT, GPL-3.0 -->
  <license>Apache-2.0</license>

  <!-- 构建工具依赖 -->
  <!-- ament_cmake 是 ROS2 的标准构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建时依赖 -->
  <!-- 这些是编译代码时需要的包 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>autoaim_msgs</build_depend>

  <!-- 运行时依赖 -->
  <!-- 这些是运行程序时需要的包 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>autoaim_msgs</exec_depend>

  <!-- 测试依赖 -->
  <!-- 这些是运行测试时需要的包 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- 如果您编写了单元测试，添加以下依赖 -->
  <!-- <test_depend>ament_cmake_gtest</test_depend> -->

  <!-- 导出信息 -->
  <!-- 告诉 ament 这是一个 cmake 包 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- 文档和额外信息（可选但推荐） -->
  <url type="website">https://github.com/your_username/your_repo</url>
  <url type="bugtracker">https://github.com/your_username/your_repo/issues</url>
  <url type="repository">https://github.com/your_username/your_repo</url>

  <!-- 作者信息（可选） -->
  <author email="author@example.com">Author Name</author>

  <!-- 包的分组标签，方便分类和搜索 -->
  <group_depend>rosidl_interface_packages</group_depend>
</package>