<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solver</name>
  <version>0.0.0</version>
  <description>PnP Solver Node for armor target detection and pose estimation</description>
  <maintainer email="xxd@todo.todo">xxd</maintainer>
  <license>TODO: License declaration</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 核心ROS2依赖 -->
  <depend>rclcpp</depend>
  
  <!-- 消息类型依赖 -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>autoaim_msgs</depend>
  <depend>detected</depend>
  <depend>utils</depend>
  <depend>fmt</depend>
  
  <!-- 坐标变换依赖 -->
  <depend>tf2_geometry_msgs</depend>
  
  <!-- 图像处理依赖 -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <!-- 第三方库依赖 -->
  <depend>libopencv-dev</depend>
  <depend>libeigen3-dev</depend>
  <depend>libyaml-cpp-dev</depend>
  <depend>libceres-dev</depend>
  

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>