<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cboard</name>
  <version>1.0.0</version>
  <description>CBoard communication library for SocketCAN interface with IMU data processing</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 编译和运行时依赖 -->
  <!-- ROS2包依赖 -->
  <depend>rclcpp</depend>
  
  <!-- 自定义依赖包 - 包含logger, thread_safe_queue, math_utils等工具 -->
  <depend>utils</depend>

  <!-- 系统库依赖 -->
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  
  <!-- 测试依赖（可选） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>