<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deveice</name>
  <version>1.0.0</version>
  <description>统一的 IO 模块，整合摄像头、下位机、云台与 IMU 功能，并导出单一动态库。</description>

  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>utils</depend>
  <depend>serial</depend>
  <depend>Eigen3</depend>
  <depend>OpenCV</depend>
  <depend>yaml-cpp</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>libserial-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
