<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 包的基本信息 -->
  <name>gimbal</name>
  <version>1.0.0</version>
  <description>Gimbal serial communication library for vision system</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>yaml-cpp</build_depend>
  

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>utils</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>