<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detected</name>
  <version>0.0.2</version>
  <description>装甲板检测动态库，提供基于YOLO的同步检测接口</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>yaml-cpp</depend>
  <depend>libopencv-dev</depend>
  <depend>openvino</depend>
  <depend>utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
